<resources>
    <string name="app_name">ResponderZero</string>

    <!-- Strings related to AllEmergencyActivity -->
    <string name="all_emergency_title">Emergencies</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="status">Status</string>
    <string name="message">Message</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for
        providing email completions."
    </string>
    <string name="title_activity_all_emergency">AllEmergencyActivity</string>

    <!-- Strings related to User Skills -->
    <string name="select">Select Your Skills</string>
    <string name="action_settings">Settings </string>
    <string name="self_destruct">Destroy</string>
    <string name="cpr">CPR</string>
    <string name="choking">Choking</string>
    <string name="aed">AED</string>
    <string name="bleeding">Bleeding Control</string>
    <string name="naloxone">Naloxone Administration</string>
    <string name="epinephrine">Epinephrine Administration</string>
    <string name="next">Next</string>
</resources>
